feat(medium): exercise 04 & 05 of the medium stage done

--- a/deno.json
+++ b/deno.json
@@ -4,5 +4,12 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
+  },
+  "fmt": {
+    "bracePosition": "nextLine",
+    "semiColons": false,
+    "spaceAround": true,
+    "useTabs": true,
+    "singleQuote": true
   }
 }
